# statipy

./: README.md  pyproject.toml  requirements.txt
statipy/: __init__.py  client.py  db.py  ext.py
