[tool.poetry]
name = "statipy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4"
interactions = {git = "https://github.com/interactions-py/interactions.py", rev = "5.x"}
beanie = "^1.17.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
